Set z-index of .tabbed-navigation to ensure that the jump menu passes behind it (#318)

--- a/src/components/pages/article/article-page.scss
+++ b/src/components/pages/article/article-page.scss
@@ -23,6 +23,8 @@
 }
 
 .tabbed-navigation {
+  @include mixins.z-index(1);
+
   display: block;
   position: sticky;
   top: 0;
